# knue-policy-hub

.github/workflows/: check-regulation-updates.yml
tools/: check_updates.py  pyproject.toml  regulations.json
규정/제2편/제2장/: 한국교원대학교 연구윤리진실성위원회 규정.md
규정/제4편/제1장/: 한국교원대학교 교직원 행동강령.md
