[project]
name = "knue-regulation-checker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "beautifulsoup4>=4.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["check_updates.py", "regulations.json"]

[project.scripts]
check-updates = "check_updates:main"
